# proxy-geos-hc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  INSTALL_PREREQUISITES.md  NOTES_ISSUES.md  README  README.md  README_SPECIFIC_and_TODO.md  README_preinstall.md  README_preinstallnew_1.md  README_prerequisites_general.md  TIPS_AND_TRICKS.md  config.h  env.sh  envP3.sh
.github/workflows/: ci.yml
blt/: SetupBLT.cmake
configs/: configI7_setTPLs.cmake  config_core_guix.cmake  config_proxy-app.cmake  config_proxyp-app.cmake  config_x86_guix.cmake
env/: env.sh  envJie.sh  envP3OMP.sh  env_Cypress_A100GPU.sh  env_Cypress_Mi100GPU.sh  env_GraceHopper_H100GPU.sh  env_P3_V100GPU.sh  env_Pangea3_V100GPU.sh  env_jie_Cypress_GPU.sh  env_jie_GraceHopper_GPU.sh
guix-config/: env_var.sh
guix-manifest/: config_time_machine.scm  manifest_tpl_kokkos-cuda-ada_openmp.scm  manifest_tpl_kokkos-cuda.scm  manifest_tpl_kokkos-openmp_notests.scm  manifest_tpl_kokkos-openmp_v4-0-01.scm  manifest_tpl_kokkos.scm  manifest_tpl_raja-cuda_v100.scm
python/: simpleMesh.cpp
scripts/: compile_p3_GPU.sh  compile_pecan_CPU.sh  compile_pecan_GPU.sh  make_executable.sh  plt.script  testscript_A100GPU.sh
src/: CMakeLists.txt  CMakeLists_org.txt
src/LvArray/: CMakeLists.txt
src/LvArray/docs/doxygen/: LvArrayConfig.hpp
src/LvArray/src/: ChaiBuffer.hpp
src/fd/: :w  CMakeLists.txt  FDTDKokkos.cpp  FDTDOMP.cpp  FDTDRAJA.cpp  FDTDRaja.cpp  FDTDSEQUENTIAL.cpp  FDTDmain.cpp
src/fd/utilsFDTD/: FDTDKernel.hpp  FDTDMacros.hpp  FDTDdata.hpp  FDTDinit.hpp  FDTDkernel.hpp  FDTDkernels.hpp  FDTDmacros.hpp  FDTDutils.hpp
src/finiteElements/: CMakeLists.txt  QkGL.cpp  QkGL.hpp
src/finiteElements/python/: QkGL.cpp
src/main/: main.cpp  semproxy.cpp  semproxy.hpp
src/mesh/: simpleMesh.cpp  simpleMesh.hpp
src/mesh/python/: simpleMesh.cpp
src/sem/: CMakeLists.txt  sem_sources
src/sem/finiteElements/: QkGL.cpp  QkGL.hpp  SEMQkGL.cpp  SEMQkGL.hpp  SEMQkGLBasisFunctions.hpp  SEMQkGLIntegrals.hpp
src/sem/finiteElements/python/: CMakeLists.txt  QkGL.cpp
src/sem/main/: CMakeLists.txt  SEMdata.hpp  SEMmacro.hpp  SEMmacros.hpp  SEMproxy.cpp  SEMproxy.hpp  main.cpp  semproxy.cpp  semproxy.hpp
src/sem/mesh/: CMakeLists.txt  SEMmesh.cpp  SEMmesh.hpp  simpleMesh.cpp  simpleMesh.hpp
src/sem/mesh/python/: CMakeLists.txt
src/sem/solver/: SEMsolver.0.cpp  SEMsolver.cpp  SEMsolver.hpp  solver.hpp  solverBase.cpp  solverBase.hpp  solverKokkos.cpp  solverKokkos.hpp  solverKokkos3DColor.cpp  solverKokkos3DInline.cpp  solverKokkos3DNoInline.cpp  solverKokkosInlining.cpp  solverKokkosNoInlining.cpp  solverKokkosOptInline.cpp  solverKokkosOptNoInline.cpp  solverKokkosOptTeams.cpp  solverOMP.cpp  solverOMP.hpp  solverRaja.cpp  solverRaja.hpp  solverRaja3DInline.cpp  solverRaja3DNoInline.cpp  solverRajaInlining.cpp  solverRajaNoInlining.cpp  solverRajaNoOpt.cpp  solverRajaOpt.cpp  solverRajaOptInline.cpp  solverSEQUENTIAL.cpp  solverSEQUENTIAL.hpp  solverSequential.cpp  solverSequential.hpp
src/sem/solver/kokkos/: solverKokkos.hpp  solverKokkos2DColor.cpp  solverKokkos2DInline.cpp  solverKokkos2DNoInline.cpp  solverKokkos2DTeamsInLines.cpp  solverKokkos3DColor.cpp  solverKokkos3DInline.cpp  solverKokkos3DNoInline.cpp
src/sem/solver/omp/: solver2DOMP.cpp  solver3DOMP.cpp  solverOMP.hpp
src/sem/solver/raja/: solverRaja.hpp  solverRaja2DInLine.cpp  solverRaja2DNoInline.cpp  solverRaja3DInline.cpp  solverRaja3DNoInline.cpp
src/sem/solver/seq/: solver2DSEQUENTIAL.cpp  solver3DSEQUENTIAL.cpp  solverSEQUENTIAL.hpp
src/sem/utils/: CMakeLists.txt  commonConfig.hpp.in  commonMacro.hpp  dataType.hpp  utils.hpp
src/solver/: CMakeLists.txt  solver.cpp  solver.hpp  solverBase.cpp  solverBase.hpp  solverKokkos.cpp  solverOMP.cpp  solverOMP.hpp  solverRaja.cpp  solverRaja.hpp  solverSequential.cpp  solverSequential.hpp  solverSequentiel.cpp  solver_ompVector.cpp  solver_rajaLvArray.cpp  solver_rajaVector.cpp  solver_sequentialVector.cpp
src/solver/ompVector/: solver.cpp  solver.hpp
src/solver/rajaVector/: solver.cpp  solver.hpp
src/solver/sequentialVector/: CMakeLists.txt  solver.cpp  solver.hpp
src/tests/: CMakeLists.txt  test.cpp  test_FDTDKokkos.cpp  test_FDTDOMP.cpp  test_FDTDRAJA.cpp  test_Kokkos.cpp  test_Kokkos0.cpp  test_Kokkos1.cpp  test_Kokkos2.cpp  test_LvArray.cpp  test_LvArrayRAJACuda.cpp  test_LvArrayRAJACudaStencil.cpp  test_LvArray_cuda.cpp  test_RAJAInline.cpp  test_RAJAInline.hpp  test_Raja_cuda.cpp  test_cuda.cpp  test_cuda_runtime.cpp  test_kokkos_hip.cpp  test_kokkos_hip_01.cpp  test_omp.cpp  test_raja_cuda_daxpy.cpp  test_raja_daxpy.cpp  test_raja_hip_daxpy.cpp
src/utils/: .CMakeLists.txt.swp  CMakeLists.txt  commonConfig.hpp.in  commonMacro.hpp  commonMacros.hpp  dataType.hpp  utils.hpp
test_20240506/: fd_KOKKOS_A100.txt  fd_KOKKOS_H100.txt  fd_KOKKOS_V100.txt  fd_OMP_AMDCPU.txt  fd_OMP_GraceCPU.txt  fd_OMP_P9CPU.txt  fd_RAJA_A100.txt  fd_RAJA_H100.txt  fd_SEQ_AMDCPU.txt  fd_SEQ_GraceCPU.txt  fd_SEQ_P9CPU.txt  sem_KOKKOS_A100.txt  sem_KOKKOS_H100.txt  sem_KOKKOS_V100.txt  sem_OMP_AMDCPU.txt  sem_OMP_GraceCPU.txt  sem_OMP_P9CPU.txt  sem_RAJA_A100.txt  sem_RAJA_H100.txt  sem_RAJA_V100.txt  sem_SEQ_AMDCPU.txt  sem_SEQ_GraceCPU.txt  sem_SEQ_P9CPU.txt
test_20240512/: result_Cypress_fd_Kokkos_A100GPU_01.txt  result_Cypress_fd_Kokkos_A100GPU_02.txt  result_Cypress_fd_Kokkos_A100GPU_03.txt  result_Cypress_fd_Kokkos_Mi100GPU_01.txt  result_Cypress_fd_Kokkos_Mi100GPU_02.txt  result_Cypress_fd_Kokkos_Mi100GPU_03.txt  result_Cypress_fd_OMP_EPYCROME_01.txt  result_Cypress_fd_OMP_EPYCROME_02.txt  result_Cypress_fd_OMP_EPYCROME_03.txt  result_Cypress_fd_Raja_A100GPU_01.txt  result_Cypress_fd_Raja_A100GPU_02.txt  result_Cypress_fd_Raja_A100GPU_03.txt  result_Cypress_fd_Raja_Mi100GPU_01.txt  result_Cypress_fd_Raja_Mi100GPU_02.txt  result_Cypress_fd_Raja_Mi100GPU_03.txt  result_Cypress_fd_SEQUENTIAL_EPYCROME_01.txt  result_Cypress_fd_SEQUENTIAL_EPYCROME_02.txt  result_Cypress_fd_SEQUENTIAL_EPYCROME_03.txt  result_Cypress_sem_Kokkos_A100GPU_01.txt  result_Cypress_sem_Kokkos_A100GPU_02.txt  (+67 more)
(+1 files in other folders)
